Added enablePreview
Signed-off-by: mariano.barcia <mariano.barcia@gmail.com>